tests/parsing/unbalanced-brackets.stderr
error[E010]: found `]`, but expected line break
 >>> ${DIRECTORY}/parsing/unbalanced-brackets.lushui:4:6
  |
4 | x: X ] X [
  |      ^ unexpected token
  |

error: aborting due to previous error

