tests/parsing/unbalanced-brackets.lushui
;; TEST fail check
;; we need to use a bracket stack

x: X ] X [
